correction signup box align center

--- a/css/signup.css
+++ b/css/signup.css
@@ -745,6 +745,7 @@ h1 {
         font-size: 61px;
         background-color: #FFFFFF;
         font-weight: 700;
+        top:37px;
     }
 
     .box-privacy-legal-notice {
@@ -752,7 +753,7 @@ h1 {
         height: 35px;
         top: 849px;
         left: 597px;
-        margin-top: 200px;
+        margin-top: 140px;
         margin-bottom: 40px;
     }
 
